sumo/tests/traci/StopNode/InvalidNode/errors.traci
Error: Answered with error to command 18: Can not retrieve node with given ID
